@@ -156,6 +156,7 @@ Codecs:
   sonic.c                               Alex Beregszaszi
   svq3.c                                Michael Niedermayer
   targa.c                               Kostya Shishkov
+  tiff.c                                Kostya Shishkov
   truemotion1*                          Mike Melanson
   truemotion2*                          Kostya Shishkov
   truespeech.c                          Kostya Shishkov
