@@ -557,6 +557,9 @@ void avcodec_register_all(void)
 #ifdef CONFIG_TIERTEXSEQVIDEO_DECODER
     register_avcodec(&tiertexseqvideo_decoder);
 #endif //CONFIG_TIERTEXSEQVIDEO_DECODER
+#ifdef CONFIG_TIFF_DECODER
+    register_avcodec(&tiff_decoder);
+#endif //CONFIG_TIFF_DECODER
 
 #if defined(CONFIG_AMR_NB) || defined(CONFIG_AMR_NB_FIXED)
 #ifdef CONFIG_AMR_NB_DECODER
